--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ RESET_DEFAULT_ADMIN_PASSWORD=false
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
-SMTP_USER=digecurtics@gmail.com
-SMTP_PASS=ccmq fylh kqbt aqay 
+SMTP_USER=angelmagaleo7@gmail.com
+SMTP_PASS=ojce qkyw neiy vozq
 MAIL_FROM=Digecur <digecurtics@gmail.com>
 
 # Destinatarios por defecto para Cardex
@@ -29,3 +29,6 @@ CARDEX_MAIL_SUBJECT=Nuevo archivo de Cardex
 
 # Límite de adjunto (MB) para evitar rebotar (Gmail ~25MB)
 MAX_EMAIL_ATTACHMENT_MB=20
+
+
+MAIL_ENABLED=true                # opcional, solo afecta logs
