--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ PORT=3000
 
 JWT_SECRET=test
 
-MONGODB_URI=mongodb://tics:x1J7Z0FVDK-eADxcgUKBqMG1GDJzpaOwMdXiU1tjSU9eAz7W@7c829a9a-18a6-4ae6-9f9f-3f3d49d2ffe1.nam5.firestore.goog:443/default?loadBalanced=true&tls=true&authMechanism=SCRAM-SHA-256&retryWrites=false
+# MONGODB_URI=mongodb://tics:x1J7Z0FVDK-eADxcgUKBqMG1GDJzpaOwMdXiU1tjSU9eAz7W@7c829a9a-18a6-4ae6-9f9f-3f3d49d2ffe1.nam5.firestore.goog:443/default?loadBalanced=true&tls=true&authMechanism=SCRAM-SHA-256&retryWrites=false
+
+MONGODB_URI=mongodb+srv://angelmagaleo7_db_user:EX5rlLX72CdTmJOj@digecur.gymnosj.mongodb.net/?retryWrites=true&w=majority&appName=DIGECUR
 
 CLOUDINARY_CLOUD_NAME=dmtnerumk
 CLOUDINARY_API_KEY=449964589264164
