--- a/.env
+++ b/.env
@@ -32,3 +32,8 @@ MAX_EMAIL_ATTACHMENT_MB=20
 
 
 MAIL_ENABLED=true                # opcional, solo afecta logs
+
+
+CLOUDINARY_CLOUD_NAME=dmtnerumk
+CLOUDINARY_API_KEY=449964589264164
+CLOUDINARY_API_SECRET=YGP1oKsk8AkMCCOhZ5xbdskBabY
